fixed scroll to top not working in firefox by adding to index.css html {overflow: hidden}

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow: hidden;
+}
+
 .perspective {
   perspective: 2px;
 }
